Finished initial layout

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,9 @@
             "type": "dart",
             "args": [
                 "-d",
-                "macos"
+                "chrome",
+                "--web-renderer",
+                "html"
             ]
         },
         {
